# template-python-lib

./: .bumpversion.toml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  manual-release.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: root_finding_example.py
src/template_python_lib/: __init__.py
src/template_python_lib/roots/: __init__.py  simple.py
tests/: test_roots.py
